cmcasset/objects/CMC_Asset_Contributor__c.object
<CustomObject>
    <description>Associations between CMC Assets and the Contacts whom contribute to them</description>
    <fields>
        <fullName>Asset__c</fullName>
        <description>Which asset did the contributor work on?</description>
        <inlineHelpText>Which asset did the contributor work on?</inlineHelpText>
        <label>Asset</label>
        <referenceTo>CMC_Asset__c</referenceTo>
        <relationshipName>Asset_Contributors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who contributed to the development of this asset?</description>
        <inlineHelpText>Who contributed to the development of this asset?</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asset Contributors</relationshipLabel>
        <relationshipName>Asset_Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_Contributed__c</fullName>
        <description>Total number of hours that the individual contributed to developing this asset.</description>
        <inlineHelpText>Total number of hours that the individual contributed to developing this asset.</inlineHelpText>
        <label>Hours Contributed</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the primary person to be contacted for any questions regarding the asset?</description>
        <inlineHelpText>Is this the primary person to be contacted for any questions regarding the asset?</inlineHelpText>
        <label>Primary Contact?</label>
        <type>Checkbox</type>
    </fields>
    <label>Asset Contributor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Asset__c</columns>
        <columns>Contact__c</columns>
        <columns>Hours_Contributed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Contributors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>HrsContributedmustbePositive</fullName>
        <active>true</active>
        <description>Hrs contributed &gt;= 0</description>
        <errorConditionFormula>Hours_Contributed__c   &lt;=  0</errorConditionFormula>
        <errorDisplayField>Hours_Contributed__c</errorDisplayField>
        <errorMessage>Hours contributed must be &gt; 0</errorMessage>
    </validationRules>
</CustomObject>